--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul id="navList">
                     <li  id="logo">
-<img id="images" src="./images/logo.jpg">
+<img id="images" src="logo.jpg">
                         <p id="navlogo">Anamika's Kitchen Recipe</p>
                     </li>
                     <li>
@@ -59,7 +59,7 @@
                     </ul>
                 </div>
                 <div class="right">
-                <img class='ing' src="./images/Gulab-Jamun-Creative_img.webp">
+                <img class='ing' src="Gulab-Jamun-Creative_img.webp">
                
             </div>
             </div>
@@ -93,7 +93,7 @@
                     </ul>
                 </div>
                 <div class="right">
-                <img  class='ing'src="./images/pizza.webp">
+                <img  class='ing'src="pizza.webp">
                 </div>
             </div>
            
